fix some issue
1. fix book-detail cut off some content
2. fix upload dir not exists when first setup project
3. fix ts2time filter error
4. add postgreSql db support

--- a/webapp/app/app.css
+++ b/webapp/app/app.css
@@ -51,11 +51,9 @@ body {
     flex: 1 1 auto;
     overflow-y: auto;
     overflow-x: hidden;
-}
-
-@media (min-width: 768px) {
+    
     /* this only for book-detail */
-    .main {  position: relative; }
+    position: relative;
 }
 
 /* footer */
